changed link to website

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ssung01-pixel-.github.io/sarinnaSung",
+  "homepage": "https://ssung01-pixel.github.io/sarinnaSung/",
   "name": "sarinnaSung",
   "version": "0.1.0",
   "private": true,
